quoting-CypressTK1/force-app/main/default/objects/CloneSchemaParentChild__mdt/CloneSchemaParentChild__mdt.object-meta.xml
<CustomObject>
    <label>Clone Schema Parent/Child</label>
    <pluralLabel>Clone Schema Parent/Children</pluralLabel>
</CustomObject>