quoting-CypressTK1/force-app/main/default/objects/CloneSchemaParentChild__mdt/fields/ChildCloneSchemaId__c.field-meta.xml
<CustomField>
    <fullName>ChildCloneSchemaId__c</fullName>
    <label>Child Clone Schema</label>
    <referenceTo>CloneSchema__mdt</referenceTo>
    <relationshipLabel>Children Clone Schemas</relationshipLabel>
    <relationshipName>ChildrenCloneSchemas</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>