quoting-CypressTK1/force-app/main/default/objects/CloneSchemaParentChild__mdt/fields/ParentCloneSchemaId__c.field-meta.xml
<CustomField>
    <fullName>ParentCloneSchemaId__c</fullName>
    <label>Parent Clone Schema</label>
    <referenceTo>CloneSchema__mdt</referenceTo>
    <relationshipLabel>Children Clone Schemas</relationshipLabel>
    <relationshipName>CloneSchemas</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>